# vencura

./: .coderabbit.yaml  .gitignore  .gitleaks.toml  .npmrc  .prettierignore  .trufflehogignore  CONTRIBUTING.md  FULL_REVIEW.md  README.md  biome.json  bunfig.toml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.adrs/: 001-monorepo-vs-standalone.md  002-vencura-api-framework.md  003-frontend-apps-framework.md  004-design-system.md  005-package-manager.md  006-linters.md  007-vencura-api-infrastructure.md  008-frontend-infrastructure.md  009-viem-vs-ethers.md  010-vencura-infra-orchestration.md  011-vencura-api-orm.md  012-vencura-ai-architecture.md  013-vencura-api-test-gas-faucet.md  014-environment-strategy.md  015-database-vs-dynamic-metadata.md  016-documentation-framework.md
.cursor/: README.md  mcp.json  worktrees.json
_dev/: README.md
contracts/: DEPENDENCY_UPDATES.md
contracts/solana/programs/test-token/: Cargo.toml
contracts/solana/programs/test-token/src/: lib.rs
docs/: deployment-and-branching-strategy.md  deployment-guide.md  dynamic-integration.md  environment-strategy.md  git-workflow.md  google-cloud-deployment.md  google-cloud-security.md  mcp-servers.md  testing-patterns.md  vercel-optimizations.md  vercel-portability-strategy.md
infra/: README.md
scripts/: README.md  block-secret-files.mjs  ensure-tool.mjs  prepare-publish.mjs  restore-publish.mjs  scan-osv.mjs  scan-secrets-staged.mjs  security-check.mjs  setup-database.mjs  setup-evm-tools.mjs  setup-gitleaks.mjs  setup-osv-scanner.mjs  (+3 more)
(+995 files in other folders)
